--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.3",
-    "expo": "~51.0.28",
-    "expo-constants": "~16.0.2",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-status-bar": "~1.12.1",
+    "@expo/metro-runtime": "~4.0.0",
+    "expo": "^52.0.21",
+    "expo-constants": "~17.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-router": "^4.0.14",
+    "expo-status-bar": "~2.0.0",
     "expo-vector-icons": "^10.0.1",
     "nativewind": "^2.0.11",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.76.5",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
