prettier, esLint, Error lens 23/12 02:40

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "clase-19",
+    "name": "expresscash",
     "slug": "clase-19",
     "newArchEnabled": true,
     "version": "1.0.0",
