--- a/package.json
+++ b/package.json
@@ -16,16 +16,28 @@
     "expo-router": "^4.0.14",
     "expo-status-bar": "~2.0.0",
     "expo-vector-icons": "^10.0.1",
+    "lucide-react-native": "^0.469.0",
     "nativewind": "^2.0.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "^0.76.5",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "eslint": "^9.17.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-native": "^4.1.0",
+    "prettier": "^3.4.2",
     "tailwindcss": "3.3.2"
   },
   "private": true
