--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.jsx\" --fix",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write 'app/**/*.{js,jsx,ts,tsx}' 'components/**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
