--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,3 @@
 {
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true
+  "files": ["app/**/*.{js,jsx,ts,tsx}", "components/**/*.{js,jsx,ts,tsx]"]
 }
