--- a/package.json
+++ b/package.json
@@ -13,22 +13,24 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~4.0.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
     "expo": "^52.0.21",
     "expo-constants": "~17.0.3",
+    "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "^4.0.14",
     "expo-status-bar": "~2.0.0",
     "expo-vector-icons": "^10.0.1",
     "lucide-react-native": "^0.469.0",
     "nativewind": "^2.0.11",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-native": "^0.76.5",
-    "react-native-safe-area-context": "^4.12.0",
+    "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.10",
-    "expo-linear-gradient": "~14.0.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
