--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "expo-module-scripts": "^4.0.2",
     "tailwindcss": "3.3.2"
   },
   "private": true
