--- a/package.json
+++ b/package.json
@@ -30,11 +30,15 @@
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "expo-module-scripts": "^4.0.2",
+    "prettier": "^3.4.2",
     "tailwindcss": "3.3.2"
   },
   "private": true
