--- a/app.json
+++ b/app.json
@@ -6,12 +6,12 @@
     "version": "1.0.0",
     "scheme": "expresscash",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/logo.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./assets/logo.png",  
+      "resizeMode": "center", 
+      "backgroundColor": "#004D56"  
     },
     "ios": {
       "supportsTablet": true
