--- a/app.json
+++ b/app.json
@@ -9,9 +9,9 @@
     "icon": "./assets/logo.png",
     "userInterfaceStyle": "dark",
     "splash": {
-      "image": "./assets/logo.png",  
-      "resizeMode": "center", 
-      "backgroundColor": "#004D56"  
+      "image": "./assets/logo.png",
+      "resizeMode": "center",
+      "backgroundColor": "#004D56"
     },
     "ios": {
       "supportsTablet": true
@@ -26,7 +26,8 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-font"
     ]
   }
 }
