--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "format": "prettier --write 'app/**/*.{js,jsx,ts,tsx}' 'components/**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/metro-runtime": "~4.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@tailwindcss/forms": "^0.5.10",
+    "autoprefixer": "^10.4.20",
     "expo": "^52.0.21",
     "expo-constants": "~17.0.3",
+    "expo-font": "~13.0.2",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "^4.0.15",
@@ -31,7 +35,9 @@
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "tailwind-scrollbar": "^3.1.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -39,7 +45,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "expo-module-scripts": "^4.0.2",
     "prettier": "^3.4.2",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
