--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "@react-navigation/stack": "^7.1.1",
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "^10.4.20",
-    "expo": "^52.0.21",
+    "expo": "~52.0.24",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.2",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
-    "expo-router": "^4.0.15",
+    "expo-router": "~4.0.16",
     "expo-status-bar": "~2.0.0",
     "expo-vector-icons": "^10.0.1",
     "lucide-react-native": "^0.469.0",
@@ -32,12 +32,13 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-native": "^0.76.5",
-    "react-native-safe-area-context": "^4.14.1",
-    "react-native-screens": "~4.1.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.10",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "expo-splash-screen": "~0.29.19"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
