--- a/package.json
+++ b/package.json
@@ -17,18 +17,24 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.1.1",
+    "@reduxjs/toolkit": "^2.6.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@tanstack/react-query": "^5.67.1",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.8.1",
+    "base-64": "^1.0.0",
     "expo": "~52.0.25",
     "expo-constants": "~17.0.4",
     "expo-font": "~13.0.3",
     "expo-image-picker": "~16.0.4",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
+    "expo-notifications": "~0.29.13",
     "expo-router": "~4.0.16",
     "expo-splash-screen": "^0.29.20",
     "expo-status-bar": "~2.0.1",
     "expo-vector-icons": "^10.0.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react-native": "^0.469.0",
     "nativewind": "^2.0.11",
     "react": "^18.0.0",
@@ -38,16 +44,18 @@
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.10",
+    "react-redux": "^9.2.0",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react": "~18.3.12",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "expo-module-scripts": "^4.0.2",
     "prettier": "^3.4.2",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "3.3.2"
   },
   "private": true
 }
