--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "react-native-web": "~0.19.10",
     "react-redux": "^9.2.0",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "@react-native-masked-view/masked-view": "0.3.2",
+    "expo-blur": "~14.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
